/***********************************************************************
 X3 ChangeLog

2007-01-12  Alex Schumann   <rubin@afternet.org>

        * src/mod-helpserv.c: This module is coded very poorly, with lots of
	newby c mistakes with pointers and malloc and whatnot. This fixes some
	small part of that so that user commands work again, and to reduce
	confusion.  It needs a LOT more work to be what I would consider
	safe..

2007-01-12  Neil Spierling  <sirvulcan@gmail.com>

	* src/spamserv.c: Horrible but it will do, i need to rewrite
	the flag system.

	* src/spamserv.h: Oppsie, probably my fault. Fixed caps and
	badreaction being linked up.

	* src/proto-p10.c: Fixed handling of incoming SVSPART's.

2007-01-10  Alex Schumann  <rubin@afternet.org>

        * src/log.c: commented out impossible assertion which makes x3 core on
	fatal errors instead of exit cleanly.

2007-01-10  Alex Schumann  <rubin@afternet.org>

        * src/mod-helpserv.c: fix strncpy problem

2007-01-07  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Fixed some bugs in trace_check_bans (Used with
	checkrestrictions alerts.

	* src/opserv.c: Fixed up how limits are check with checkrestrictions.

2007-01-07  Neil Spierling  <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Added HAVE_HELPSERV.

	* x3.conf.example: Seems theres been a hidden prefix option to
	allow users to use helpserv commands (ones for users not helpers).

	* src/config.h.in: Added HAVE_HELPSERV.

	* src/mod-helpserv.c: Made helpserv more useable:

	* Added CLOSEREQ for users to close their current request.

	* Added SHOWREQ for users to show their current req (equiv of SHOW).

	* Added JoinTotal, if ON then when a helper joins the channel they
	will be sent a notice of the total UNASSIGNED requests. 

	* Added AlertNew, if ON then when a user opens a new help request
	all helpers will be alerted.

	* Added SUSPEND/UNSUSPEND for suspending and unsuspending help 
	bots.
